# physics

./: .gitignore  .pre-commit-config.yaml  MOTIVATION.md  PROGRESS.md  README.md  ROADMAP.md  STUDYPLAN.md  pyproject.toml
.cursor/rules/: ipynb-math-notation.md
notebooks/00_index/: Untitled.ipynb
notebooks/jupyter/: Gravipy.ipynb  SymPy.ipynb
notebooks/physics/01_mechanics/: AdvanceClassicalMechanics.ipynb  template.ipynb
notebooks/physics/01_mechanics/SusskindLectures/: 01_ClassicalMechanics.ipynb
notebooks/physics/06_relativity/books/Spacetime and Geometry/: 00_Preface.ipynb  01_SpecialRelativity.ipynb
notebooks/physics/06_relativity/books/Spacetime and Geometry/01_SpecialRelativity/: 01_01_SpecialRelativity_Prelude.ipynb  01_02_SpecialRelativity_SpaceAndTime.ipynb  01_03_SpecialRelativity_LorentzTransformations.ipynb  01_04_SpecialRelativity_Vectors.ipynb
references/: references.bib
scripts/: check_progress_update.sh
templates/: 00_note_template.ipynb
